kubeadm/challenge/k8s/network-policies/allow-prometheus-scrape-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-scrape-backend
  namespace: prod-database
spec:
  podSelector:
    matchLabels:
      app: portfolio-backend
  policyTypes:
    - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
    ports:
      - protocol: TCP
        port: 80
