kubeadm/challenge/k8s/network-policies/backend-to-database.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-to-database
  namespace: prod-database
spec:
  podSelector:
    matchLabels:
      tier: database
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: portfolio-backend
    - podSelector:
        matchLabels:
          app: postgresql-backup
    ports:
    - protocol: TCP
      port: 5432
    - protocol: TCP
      port: 6379
