kubeadm/challenge/k8s/network-policies/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: prod-database
spec:
  podSelector: {}
  policyTypes:
  - Ingress
