kubeadm/challenge/k8s/network-policies/ingress-to-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-to-backend
  namespace: prod-database
spec:
  podSelector:
    matchLabels:
      app: portfolio-backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
    
    ports:
    - protocol: TCP
      port: 80
